# url-shortener

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  events.csv  load_data.py  locustfile.py  pyproject.toml  urls.csv  users.csv
.github/workflows/: ci.yml
app/: __init__.py  cache.py  database.py  logging_config.py  metrics.py
app/models/: event.py  url.py  user.py
app/routes/: events.py  urls.py  users.py
docs/: operations.md
nginx/: nginx.conf
tests/: conftest.py  test_events.py  test_health.py  test_urls.py  test_users.py
